--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Donne ton pronostique sur notre future bébé" />
+
+    <meta property="og:description" content="Donne ton pronostique sur notre future bébé" />
+    <meta property="og:title" content="Pronostique" />
+    <meta property="og:url" content="https://prono.since88.io/" />
+    <meta property="og:image" content="https://prono.since88.io/baby-foot.png" />
+    <meta property="og:image:secure_url" content="https://prono.since88.io/baby-foot.png" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image:alt" content="Baby foot boys or girls" />
+    <meta property="og:site_name" content="Pronostique" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Baby Pronostics</title>
