--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Donne ton pronostique sur notre future bébé" />
+    <meta name="description" content="Donne ton pronostique sur notre futur bébé" />
 
-    <meta property="og:description" content="Donne ton pronostique sur notre future bébé" />
-    <meta property="og:title" content="Pronostique" />
+    <meta property="og:description" content="Donne ton pronostique sur notre futur bébé" />
+    <meta property="og:title" content="Pronostics" />
     <meta property="og:url" content="https://prono.since88.io/" />
     <meta property="og:image" content="https://prono.since88.io/baby-foot.png" />
     <meta property="og:image:secure_url" content="https://prono.since88.io/baby-foot.png" />
@@ -16,7 +16,7 @@
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
     <meta property="og:image:alt" content="Baby foot boys or girls" />
-    <meta property="og:site_name" content="Pronostique" />
+    <meta property="og:site_name" content="Pronostics" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
